playing around with positions/ flex to fix thumbnail container on mobile device

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  touch-action: none;
+  /* touch-action: none;  prevents scroll on mobile device but not fixed thumbnail box */
 }
 
 body {
@@ -37,8 +37,11 @@ form {
 }
 
 #thumbnail-container {
-  display: flex;
-  align-self: flex-end;
+  position: fixed;
+  bottom: 0.01rem;
+  left: 15%;
+  /* display: flex;
+  align-self: flex-end; */
   border: 3px solid rgb(128, 125, 125);
   width: 70%;
   height: 60px;
